# ngs-sample-tab

./: LICENSE  README.md  pyproject.toml
make_sample_tab/: __init__.py  formats.toml  make_sample_tab.py  sample_patterns.toml
playground/: README.md
